fixing nav height on mobile

--- a/app/assets/stylesheets/styles/header.scss
+++ b/app/assets/stylesheets/styles/header.scss
@@ -55,9 +55,54 @@
             margin-right: 0.5em;
             background-size: contain;
             background-position: center center;
+
+            svg {
+                width: 100%;
+                height: 100%;
+            
+                #info.btn {
+                    opacity: 1;
+                }
+                #info.btn.active {
+                    opacity: 0;
+                    visibility: hidden;
+                    display: none;
+                }
+            }
         }
     }
 }
+// #info-symbols {
+//     stroke: none; 
+//     stroke-width: 1; 
+//     fill: none; 
+//     // fill-rule: evenodd;
+// }
+// #info-btn {
+//     transform: translate(1.000000, 1.000000);
+//     display: none;
+
+//     #closed-i {
+//         opacity: 1; 
+//         font-family: $sans-serif; 
+//         font-size: 16px; 
+//         font-weight: 300; 
+//         letter-spacing: 0.850000024; 
+//         fill: #fff;
+//     }
+// }
+// #info-btn-active {
+//     // display: none;
+
+//     #open-i {
+//         opacity: 1; 
+//         font-family: $sans-serif; 
+//         font-size: 16px; 
+//         font-weight: 300; 
+//         letter-spacing: 0.850000024; 
+//         fill: #000000;
+//     }
+// }
 
 @media only screen and (max-width: 1024px ) {
     .site-nav {
@@ -217,17 +262,22 @@
             display: flex;
             flex-wrap: wrap;
             width: 100%;
+            margin-bottom: 46px;
             a {
                 flex-basis: 50%;
             }
         }
     }
 }
-
+#header.open {
+    height: 100vh;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-between;
+}
 .info-btn {
     background-image: image-url('/icons/btn-info.png');
 }
-
 #blog-btn {
     background-image: image-url('/icons/btn-blog.png');
 }
